Add - Server Explorer Fix - Design

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -12,7 +12,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
 
-  <body class="overflow-hidden bg-gray-50 w-screen h-screen min-w-screen min-h-screen">
+  <body class="overflow-x-hidden bg-gray-50 w-screen h-screen min-w-screen min-h-screen">
     <div id="app"></div>
     <script type="module" src="./src/main.js"></script>
   </body>
