--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,11 +5,10 @@
     <title>FTP Synchronizer</title>
 
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-<!--    <meta-->
-<!--      http-equiv="Content-Security-Policy"-->
-<!--      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'"-->
-<!--    />-->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'"
+    />
   </head>
 
   <body class="overflow-x-hidden bg-gray-50 dark:bg-gray-900 w-screen h-screen min-w-screen min-h-screen">
