--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>FTP Synchronizer</title>
+<head>
+  <meta charset="UTF-8" />
+  <title>FTP Synchronizer</title>
 
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'"
-    />
-  </head>
+  <meta
+    http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'"
+  />
+</head>
 
-  <body class="overflow-x-hidden bg-gray-50 dark:bg-gray-900 w-screen h-screen min-w-screen min-h-screen">
-    <div id="app"></div>
-    <script type="module" src="./src/main.js"></script>
-  </body>
+<body class="overflow-x-hidden bg-gray-50 dark:bg-gray-900 w-screen h-screen min-w-screen min-h-screen">
+<div id="app"></div>
+<script type="module"
+        src="./src/main.js"></script>
+</body>
 </html>
